crates/fluvio-test-derive/wip/fail_no_fn_args.stderr
error[E0412]: cannot find type `Arc` in this scope
 --> $DIR/fail_no_fn_args.rs:3:1
  |
3 | #[fluvio_test]
  | ^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 | use std::sync::Arc;
  |

error[E0412]: cannot find type `Fluvio` in this scope
 --> $DIR/fail_no_fn_args.rs:3:1
  |
3 | #[fluvio_test]
  | ^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 | use fluvio::Fluvio;
  |

error[E0412]: cannot find type `TestCase` in this scope
 --> $DIR/fail_no_fn_args.rs:3:1
  |
3 | #[fluvio_test]
  | ^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 | use fluvio_test_util::test_meta::TestCase;
  |
